--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "inspirational-serveless",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c rollup.config.js",
+    "deploy": "carlin deploy"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Dias Junior <reinaldo.diasjunior@gmail.com> (https://twitter.com/diasjuniorr)",
+  "license": "MIT",
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-typescript": "^8.0.0",
+    "@types/aws-lambda": "^8.10.64",
+    "carlin": "^0.10.2",
+    "rollup": "^2.34.2",
+    "typescript": "^4.1.2"
+  },
+ 
 }
+
