--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "carlin": "^0.10.2",
     "rollup": "^2.34.2",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1"
   }
 }
