--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@types/aws-lambda": "^8.10.64",
+    "@types/node-fetch": "^2.5.8",
     "carlin": "^0.10.2",
     "rollup": "^2.34.2",
     "typescript": "^4.1.2"
