--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@rollup/plugin-typescript": "^8.0.0",
     "@types/aws-lambda": "^8.10.64",
     "@types/node-fetch": "^2.5.8",
+    "@types/sharp": "^0.27.1",
     "carlin": "^0.10.2",
     "rollup": "^2.34.2",
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "sharp": "^0.27.0"
   }
 }
